NoExcuses: base service interface, models and schemas, repository implementation, remove test controller functions, authentication validation with jwt token
