# src/model/Greeting.ts
@@ -1,5 +1,0 @@
-export interface Greeting {
-    route : string
-    name? : string
-    message : string
-}
